fix(header): fix z-index in header

--- a/assets/scss/layouts/header.scss
+++ b/assets/scss/layouts/header.scss
@@ -61,7 +61,7 @@ $logo-responsive-height: 4em;
   position: fixed;
   width: 100%;
   background-color: white;
-  z-index: 9999999;
+  z-index: 99;
   transition:0.4s top cubic-bezier(.3,.73,.3,.74);
   border-bottom: 2px solid #a4b0be;
   .header-container {
